# npc_gzip

./: .gitignore  LICENSE  README.md  compressors.py  data.py  experiments.py  main_text.py  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json  onCreate
.github/workflows/: codeql.yml  lint.yml  publish-package.yml  test-package.yml
examples/: ag_news.py  imdb.py
npc_gzip/: __init__.py  aggregations.py  distance.py  exceptions.py  knn_classifier.py  knn_compressor.py  utils.py
npc_gzip/compressors/: base.py  bz2_compressor.py  gzip_compressor.py  lzma_compressor.py
original_codebase/: compressors.py  data.py  experiments.py  main_text.py  utils.py
tests/: test_aggregations.py  test_base_compressor.py  test_bz2_compressor.py  test_distance.py  test_gzip_compressor.py  test_knn_classifier.py  test_knn_compressor.py  test_lzma_compressor.py  test_utils.py
