[tool.poetry]
name = "npc-gzip"
version = "0.0.1"
description = "Code for Paper: “Low-Resource” Text Classification: A Parameter-Free Classification Method with Compressors"
authors = ["Zach Bloss <zacharybloss@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "npc_gzip"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
